# printnanny-imager

./: .eslintrc  LICENSE.txt  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: release.yml
.github/workflows/: publish.yml  release.yaml  test.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  bootfile.rs  build.rs  disk.rs  disklist.rs  disks.rs  error.rs  lib.rs  main.rs  password.rs  scanner.rs
src-tauri/src/windows/: printnanny-imager.exe.manifest  printnanny-imager.exe.rc
src/components/: DialogModal.vue  HardwareSelect2.vue  HomeLayout.vue  Wizard.vue  WizardLayout.vue  WizardLayoutv1.vue
src/components/alerts/: SimpleAlert.vue  StickyAlerts.vue
src/components/forms/: AdvancedSettingsForm.vue  BasicSettingsForm.vue
src/components/select/: CompactSelect.vue  StorageSelect.vue
src/components/spinner/: CustomSpinner.vue
src/components/steps/: ChooseDisk.vue  ChooseEdition.vue  ChooseImage.vue  ConfigureEdition.vue  ConfigureImage.vue  CreateSDCard.vue  FlashButton.vue  FlashImage.vue  ProgressBar.vue  StorageSelect.vue
src/data/: boards.ts  os.ts
src/router/: index.ts
src/store/: index.ts  settings.ts  wizard.ts
src/types/: index.ts
src/utils/: cloudInit.ts  country.ts  disk.ts  error.ts  keyboard.ts  text.ts  timezone.ts
tests/: cloudInit.test.ts
tests/__snapshots__/: cloudInit.test.ts.snap
