[package]
name = "printnanny-imager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = "1.0.64"
human_bytes = "0.3.1"
log = "0.4.17"                 # A lightweight logging facade for Rust 
nix = "0.25.0"                     # Rust friendly bindings to *nix APIs
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["dialog-all", "os-all", "shell-all"] }
block-utils = "0.10.7"
once_cell = "1.14.0"            # Single assignment cells and lazy values.

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[target.'cfg(target_os = "macos")'.dependencies]
socketpair = { version = "0.16.0" }
security-framework = { version = "2.6.1" }
